kyverno/policy/disallow-privileged.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged-containers
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: disallow-privileged
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Les containers privilégiés sont interdits."
        pattern:
          spec:
            containers:
              - =(securityContext):
                  =(privileged): "false"
